---
title: glTF 2.0 ER Diagram (Geometry Subset)
description: |
    This is a subset of the glTF 2.0 ER diagram, focusing on the geometry-describing entities.
    It includes only the essential components that users typically interact with,
    omitting internal details and less commonly used features.
config:
    layout: elk
    elk:
        mergeEdges: true
        nodePlacementStrategy: BRANDES_KOEPF
    theme: base
    themeVariables:
        darkMode: false
        primaryColor: "#88ff88"
        primaryTextColor: "#000000"
        secondaryColor: "#e0d9ef"
        secondaryTextColor: "#0000ff"
        tertiaryColor: "#f8f9fa"
        tertiaryTextColor: "#00ff00"
        borderRadius: "0.25rem"
        fontSize: "2.0rem"
        fontFamily: "Arial, sans-serif"
        background: "#00ff00"
        lineColor: "#0000cc"
        nodeBorder: "#0000ff"
---
erDiagram
    direction TB
    Builder ||..o{ BNode : nodes
    Builder ||--|| BAsset : asset
    Builder ||--o{ BScene : scenes
    Builder ||--|| BScene : scene
    Builder ||--o{ BCamera : cameras
    Builder ||--o{ BMaterial : materials
    Builder ||--o{ BMesh : meshes
    BNode ||..o| BCamera : camera
    Builder {
        list extensionsUsed        "List of used glTF extensions"
        list extensionsRequired    "List of required glTF extensions"
        dict extensions
        dict extras
    }
    BScene ||..|{ BNode : nodes
    BNode ||--o{ BNode : children
    BNode ||..o| BMesh : mesh
    BMesh ||--|{ BPrimitive : primitives
    BPrimitive ||..o| BMaterial : material
    BPrimitive {
        PrimitiveMode mode "Required, type of operation"
        Point POSITION     "Required"
        Vector3 NORMAL
        Tangent TANGENT
        Color COLOR_n      "n starting at 0"
        UvPoint TEXCOORD_n "n starting at 0"
        Joint JOINTS_n     "n starting at 0, skinned mesh attributes"
        Weight WEIGHTS_n   "n starting at 0, skinned mesh attributes"
        dict extensions
        dict extras
    }
    BAsset {
        string generator      "Name of the tool that generated the asset"
        string version        "The version of the generator"
        string copyright      "Copyright information"
        string minVersion     "Minimum glTF version required"
        string license        "License information"
        dict extensions
        dict extras
    }
    BNode {
        Optional[str] name           "Name of the node"
        bool root "Indicates no parent"
        Optional[Vector3] translation "Translation vector"
        Optional[Quaternion] rotation "Rotation quaternion"
        Optional[Vector3] scale "Scale vector"
        Optional[Matrix4] matrix "Matrix. If present, the TRS must not be present"
        dict extensions
        dict extras
    }
    BMesh {
        Optional[str] name    "Name of the mesh"
        list weights          "List of weights for morph targets"
        dict extensions
        dict extras
    }
    BMaterial {
        Optional[str] name           "Name of the material"
        Vector4 baseColorFactor "Applies to baseColorTexture"
        float metallicFactor "How metallic the material is"
        float roughnessFactor "Applies to metallicRoughnessTexture"
        Vector3 emissiveFactor "Applies to emissiveTexture"
        Vector4 baseColorFactor
        AlphaMode alphaMode       "Alpha mode for the material"
        float alphaCutoff     "Alpha cutoff value for alpha mode"
        bool doubleSided      "Indicates if the material is double-sided"
        float normalScale     "Applies to normalTexture"
        float occlusionStrength "Applies to occlusionTexture"
        dict extras
    }
    BScene {
        Optional[str] name           "Name of the scene"
        dict extensions
        dict extras
    }
    BCamera {
        Optional[str] name           "Name of the camera"
        CameraType type "Type of the camera (e.g., PERSPECTIVE)"
        float zfar "Far clipping plane"
        float znear "Near clipping plane"
        float xmag       "Horizontal field of view (orthographic)"
        float ymag      "Vertical field of view (orthographic)"
        float aspectRatio "Aspect ratio (perspective)"
        float yfov         "Vertical field of view (perspective)"
        dict extensions
        dict extras
    }
